--- a/src/components/GalaxyMap.module.css
+++ b/src/components/GalaxyMap.module.css
@@ -1028,7 +1028,8 @@
 .mapEmbed {
   position: relative;
   width: 100%;
-  height: 100%;
+  flex: 1 1 0;
+  min-height: 500px;
   overflow: hidden;
   background: var(--deep-void);
 }
